--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
