--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "6",
+    "require-context": "^1.1.0",
     "socketio": "^1.0.0"
   },
   "devDependencies": {
