--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - run: cp -r -f ./dist /home/public_html
     env:
       VITE_API_URL: ${{ secrets.VITE_API_URL }}
+    
