--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    - run: yarn run build --if-present
     - run: cp -r -f ./dist /home/public_html
     env:
       VITE_API_URL: ${{ secrets.VITE_API_URL }}
