--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -24,7 +24,7 @@ jobs:
       with:
         cache: 'npm'
     - run: npm ci
-    - run: yarn run build --if-present
+    - run: npm run build --if-present
     - run: cp -r -f ./dist /home/public_html
     env:
       VITE_API_URL: ${{ secrets.VITE_API_URL }}
