--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: yarn install
+    - run: yarn run build --if-present
     - run: cp -r -f ./dist /home/public_html
     env:
       VITE_API_URL: ${{ secrets.VITE_API_URL }}
